<resources>
    <string name="app_name">Inflation Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="currency">Currency</string>
    <string name="us_dollar">US Dollar</string>
    <string name="amount">Amount</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="delete">del</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="zero">0</string>
    <string name="current">Current</string>
    <string name="initial_year">Initial year</string>
    <string name="final_year">Final year</string>
    <string name="compute">Compute</string>
    <string name="historical_inflation_data_is_compiled_from_various_official_sources">Historical inflation data is compiled from various official sources</string>
    <string name="sources">Sources</string>
    <string name="current_year">2020</string>
    <string name="earlier_year">1992</string>

</resources>
